# scorched-earth

./: CMakeLists.txt  Dockerfile  README.md  config.json  create_container.sh  gameStage.qml  main.cpp  main.qml  resources.qrc  run_container.sh
.github/workflows/: main.yaml
qml/: MainMenu.qml  main.qml
qml/animations/: Explosion.qml
qml/common/: EndGame.qml  GameButton.qml  MenuButton.qml  PlayerStatusBar.qml  SceneBase.qml  Sky.qml  StatusBar.qml
qml/entities/: Bullet.qml  Explosion.qml  Ground.qml  Missile.qml  Player.qml  Projectile.qml  Wall.qml
qml/scenes/: GameScene.qml  MenuScene.qml
scorched-earth/: qmldir
scorched-earth/qml/: main.qml
scorched-earth/qml/animations/: Explosion.qml
scorched-earth/qml/common/: EndGame.qml
scorched-earth/qml/entities/: Crate.qml  Ground.qml  Wall.qml
scorched-earth/qml/scenes/: GameScene.qml  MenuScene.qml
